--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,4 +1,8 @@
-2006-08-21  Paul Biggar  <paul.biggar@gmail.com>
+2006-09-26  Paul Biggar  <paul.biggar@gmail.com>
+
+	* java/lang/Object.h (gcj/array.h): Removed unused header
+
+2006-09-25  Paul Biggar  <paul.biggar@gmail.com>
 
 	* gcj/javaprims.h (_Jv_InitObjectNoFinalizer): Renamed from
 	_Jv_AllocaObjectNoFinalizer 
