--- a/gcc-4_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-4_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,14 @@
+2006-09-25  Howard Hinnant  <hhinnant@apple.com>
+
+	PR libstdc++/29224
+	* include/tr1/functional_iterate.h: Avoid -Wshadow warnings.
+
+2006-09-25  Paolo Carlini  <pcarlini@suse.de>
+
+	PR libstdc++/29179
+	* include/ext/mt_allocator.h (__pool_base): Adjust/extend
+	documentation in comments.
+
 2006-08-18  Paolo Carlini  <pcarlini@suse.de>
 
 	PR libstdc++/28765
