Add comment and remove -fno-tree-lrs from testcase
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/out-of-ssa-the-sequel@117228 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-26  Andrew MacLeod  <amacleod@redhat.com>
+
+	* tree-outof-ssa.c (build_ssa_conflict_graph): Add comments.
+
 2006-09-25  Andrew Macleod  <amacleod@redhat.com>
 
 	* tree-ssa-ter.c (struct temp_expr_table_d): Rensame fields, add 
