Backport from mainline: 	2006-09-21  Janis Johnson  <janis187@us.ibm.com> 	* ginclude/decfloat.h (DEC*_DEN): Define using the correct builtins.
	2006-09-20  Janis Johnson  <janis187@us.ibm.com>
	* doc/extend.texi (Decimal Float): Update for latest draft TR,
	clean up terminology.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@117233 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,4 +1,14 @@
-2006-09-25  Janis Johnson  <janis187@us.ibm.com
+2006-09-26  Janis Johnson  <janis187@us.ibm.com>
+
+	Backport from mainline:
+	2006-09-21  Janis Johnson  <janis187@us.ibm.com>
+	* ginclude/decfloat.h (DEC*_DEN): Define using the correct builtins.
+
+	2006-09-20  Janis Johnson  <janis187@us.ibm.com>
+	* doc/extend.texi (Decimal Float): Update for latest draft TR,
+	clean up terminology.
+
+2006-09-25  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport:
 	2006-02-14  Jakub Jelinek  <jakub@redhat.com>
