--- a/gcc-4_1-branch/libdecnumber/ChangeLog
+++ b/gcc-4_1-branch/libdecnumber/ChangeLog
@@ -1,3 +1,5 @@
+2006-09-26  Janis Johnson  <janis187@us.ibm.com>
+
 	Backport from mainline:
 
 	2006-09-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
