--- a/gcc-4_1-branch/gcc/fortran/ChangeLog
+++ b/gcc-4_1-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/29097
+	* scanner.c (include_line): Handle conditional include.
+
 2006-08-09 Paul Thomas <pault@gcc.gnu.org>
 
 	PR fortran/28600
