--- a/gcc-4_1-branch/libgomp/ChangeLog
+++ b/gcc-4_1-branch/libgomp/ChangeLog
@@ -1,3 +1,18 @@
+2006-09-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/25261
+	PR middle-end/28790
+	* testsuite/libgomp.c/nestedfn-4.c: New test.
+	* testsuite/libgomp.c/nestedfn-5.c: New test.
+	* testsuite/libgomp.fortran/nestedfn3.f90: New test.
+
+	PR fortran/29097
+	* testsuite/libgomp.fortran/condinc1.f: New test.
+	* testsuite/libgomp.fortran/condinc2.f: New test.
+	* testsuite/libgomp.fortran/condinc3.f90: New test.
+	* testsuite/libgomp.fortran/condinc4.f90: New test.
+	* testsuite/libgomp.fortran/condinc1.inc: New file.
+
 2006-09-13  Joseph S. Myers  <joseph@codesourcery.com>
 
 	PR c/28768
