svn merge -r117225:117266 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_1-branch
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@117287 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2006-09-27  Paul Brook  <paul@codesourcery.com>
+
+	PR target/29230
+	Backport from mainline.
+	* config/arm/arm.md (arith_adjacentmem): Handle large offsets.
+
 2006-09-26  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/25261
