use simpler hash function from conflict.c
2006-09-29  Andrew MacLeod  <amacleod@redhat.com>

	* tree-ssa-ilve.c (mix): Remove.
	(coalesce_pair_map_hash): Use simpler hash function.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/out-of-ssa-the-sequel@117305 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2006-09-29  Andrew MacLeod  <amacleod@redhat.com>
 
+	* tree-ssa-ilve.c (mix): Remove.
+	(coalesce_pair_map_hash): Use simpler hash function.
+
+2006-09-29  Andrew MacLeod  <amacleod@redhat.com>
+
 	* tree-ssa-ilve.c (mix): Define hash mix.
 	(coalesce_pair_map_hash): Use hash mix.
 	(create_coalesce_list): Calculate initial size of hash table.
