--- a/gcc-4_1-branch/fixincludes/ChangeLog
+++ b/gcc-4_1-branch/fixincludes/ChangeLog
@@ -1,3 +1,28 @@
+2006-10-03  Uros Bizjak <uros@kss-loka.si>
+
+	* inclhack.def (glibc_mutex_init): Also fix
+	PTHREAD_MUTEX_(RECURSIVE|ERRORCHECK|ADAPTIVE)_NP and
+	PTHREAD_RWLOCK_PREFER_WRITER_NONRECURSIVE_NP initializers.
+	* tests/base/pthread.h: Update.
+
+	* fixincl.x: Regenerate.
+
+2006-10-01  Uros Bizjak <uros@kss-loka.si>
+
+	* inclhack.def (glibc_mutex_init): New fix.
+	* tests/base/pthread.h: Update.
+
+	* fixincl.x: Regenerate.
+
+2006-09-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* inclhack.def (solaris_mutex_init_2): Update for Solaris9.
+	Prevent it from running on solaris10 or later.
+	(solaris_once_init_2): Fix comment.
+	* tests/base/pthread.h: Update.
+
+	* fixincl.x: Regenerate.
+
 2006-09-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* inclhack.def (solaris_once_init_2): New fix.
