PR libgcj/29278: 	* Makefile.in: Rebuilt. 	* Makefile.am ($(generic_header_files)): Depend on gcjh.stamp. 	(gcjh.stamp): New target.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117521 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2006-10-06  Tom Tromey  <tromey@redhat.com>
+
+	PR libgcj/29278:
+	* Makefile.in: Rebuilt.
+	* Makefile.am ($(generic_header_files)): Depend on gcjh.stamp.
+	(gcjh.stamp): New target.
+
 2006-10-06  Andrew Haley  <aph@redhat.com>
 
 	* posix-threads.cc (_Jv_ThreadUnpark, _Jv_ThreadPark): Moved here
