2006-10-09  Andrew Haley  <aph@redhat.com>
        * win32-threads.cc (_Jv_ThreadUnpark, _Jv_ThreadPark): New
        functions.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117572 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-09  Andrew Haley  <aph@redhat.com>
+
+	* win32-threads.cc (_Jv_ThreadUnpark, _Jv_ThreadPark): New
+	functions.
+
 2006-10-06  Tom Tromey  <tromey@redhat.com>
 
 	PR libgcj/29278:
