--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,3 +1,39 @@
+2006-10-06  Steve Ellcey  <sje@cup.hp.com>
+
+	PR target/28490
+	Backport from mainline
+	2006-09-15  Jim Wilson  <wilson@specifix.com>
+	2006-09-19  Steve Ellcey  <sje@cup.hp.com>
+	* config/ia64/ia64.c (ia64_legitimate_constant_p): Allow function
+        pointers as legitimate constants.  Handle symbol offsets same as
+	they are handled in ia64_expand_move and move_operand.
+
+2006-10-06  Jakub Jelinek  <jakub@redhat.com>
+
+	* tree-loop-linear.c (linear_transform_loops): Don't forget to
+	free DEPENDENCE_RELATIONS and DATAREFS.
+
+	PR target/28924
+	* builtins.c (expand_builtin_sync_operation,
+	expand_builtin_compare_and_swap, expand_builtin_lock_test_and_set):
+	Use convert_to_mode to handle promoted arguments.
+
+2006-10-05  Uros Bizjak  <uros@kss-loka.si>
+
+	* config/i386/sync.md ("sync_add<mode>", "sync_sub<mode>",
+	"sync_ior<mode>", "sync_and<mode>", "sync_xor<mode>"):
+	Use <modeconstraint> instead of "r" as operand 1 constraint.
+
+2006-10-06  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/29290
+	* tree-loop-linear.c (linear_transform_loops): Bail if loop_nest has
+	multiple exits.
+
+	PR target/29198
+	* config/i386/i386.c (legitimize_pic_address): Reject TLS symbols.
+	* config/i386/predicates.md (local_symbolic_operand): Likewise.
+
 2006-10-05  David Edelsohn  <edelsohn@gnu.org>
 
 	Backport from mainline
